--- a/app/src/main/res/values-pt-rPT/strings.xml
+++ b/app/src/main/res/values-pt-rPT/strings.xml
@@ -49,4 +49,13 @@
     <string name="n_p_message">O aplicativo precisa de permissão de notificações para postar notificações neste dispositivo.</string>
     <string name="n_p_not_granted">Permissão de notificações não concedida</string>
     <string name="open_app_settings">Abra as configurações do aplicativo</string>
+    <string name="themes">Temas</string>
+    <string name="choose_language">Escolha o idioma</string>
+    <string name="choose_theme">Escolha o tema</string>
+    <string name="next">Próximo</string>
+    <string name="str_continue">Continuar</string>
+    <string name="great">Ótimo!</string>
+    <string name="you_are_all_set">Está pronto para usar o aplicativo.</string>
+    <string name="language_selection_done">Seleção do idioma concluída</string>
+    <string name="theme_selection_done">Seleção do tema concluída</string>
 </resources>
