--- a/app/src/main/res/values-es-rES/strings.xml
+++ b/app/src/main/res/values-es-rES/strings.xml
@@ -49,4 +49,13 @@
     <string name="n_p_message">La aplicación necesita permiso de notificaciones para publicar notificaciones en este dispositivo.</string>
     <string name="n_p_not_granted">Permiso de notificaciones no concedido</string>
     <string name="open_app_settings">Abrir configuración de la aplicación</string>
+    <string name="themes">Temas</string>
+    <string name="choose_language">Elegir idioma</string>
+    <string name="choose_theme">Elegir tema</string>
+    <string name="next">Siguiente</string>
+    <string name="str_continue">Continuar</string>
+    <string name="great">¡Genial!</string>
+    <string name="you_are_all_set">Ya está todo listo para usar la app.</string>
+    <string name="language_selection_done">Selección de idioma completada</string>
+    <string name="theme_selection_done">Selección de tema completada</string>
 </resources>
