--- a/app/src/main/res/values-nl-rNL/strings.xml
+++ b/app/src/main/res/values-nl-rNL/strings.xml
@@ -49,4 +49,13 @@
     <string name="n_p_message">App heeft toestemming voor meldingen nodig om meldingen op dit apparaat te plaatsen.</string>
     <string name="n_p_not_granted">Toestemming voor meldingen niet verleend</string>
     <string name="open_app_settings">Open App-instellingen</string>
+    <string name="themes">Thema\'s</string>
+    <string name="choose_language">Taal kiezen</string>
+    <string name="choose_theme">Thema kiezen</string>
+    <string name="next">Volgende</string>
+    <string name="str_continue">Doorgaan</string>
+    <string name="great">Geweldig!</string>
+    <string name="you_are_all_set">Je bent helemaal klaar om de app te gebruiken.</string>
+    <string name="language_selection_done">De taal is geselecteerd</string>
+    <string name="theme_selection_done">Het thema is geselecteerd</string>
 </resources>
